# agent-scratch

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  app.py  config.py  docker-compose.yaml  dockerfile  main.py  models.py  pyproject.toml  tools.py
cli/: app.jsx  package-lock.json  package.json
core/: chat.py  gemini_models.py  models.py  registry.py  tools.py
helpers/: config.py  console.py  response.py
models/: conversation.py  io_interface.py  tool_function.py
tests/core/: test_registry.py
tests/models/: test_conversation.py  test_io_interface.py  test_tool_function.py
