[project]
name = "agent-scratch"
version = "0.1.0"
description = "A basic agent"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.138.1",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "rich>=15.0.0",
]

[tool.setuptools]
packages = ["models", "helpers", "core"]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
gemini = [
    "google-genai>=2.9.0",
]
